2017-07-17  Jonathan Kew  <jfkthame@gmail.com>

	* xetex.ch: Set a non-zero exit code if the pipe
	to the output driver closes with a non-zero code.

2017-04-27  Karl Berry  <karl@tug.org>

	* am/xetex.am (xetex_ldadd): add $(ICU_LIBS_EXTRA).

2017-04-22  Jonathan Kew  <jfkthame@gmail.com>

	* xetex.web, xetex_version.h, NEWS: Fixed long-standing bug that made
	\ifcat\span...\fi (and similar constructions with \cr, \crcr) behave
	incorrectly. Also fixed initialization of \delcode values for
	supplementary-plane characters. version 0.99998.

2017-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Sync with the upstream (version 0.99997).

2017-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Sync with the upstream.

2016-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeXOTMath.cpp: Sync with the upstream.

2016-09-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* MathTable.h, XeTeXOTMath.cpp: Sync with the upstream.

2016-09-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web: Sync with the upstream.

2016-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Revert the change on 2015-11-06.
	That is, recover the original *outputdriver = "xdvipdfmx -q -E",
	because asynchronous outputs of XeTeX and xdvipdfmx are messy.

2016-02-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web, NEWS: sync with the upstream.

2015-11-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Change const char *outputdriver = "xdvipdfmx -q -E";
	as const char *outputdriver = "xdvipdfmx -E"; by removing the quiet
	option, in order to show useful messages for users.

2015-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/bmpimage.c, image/pngimage.c: Drop set but unused vars.
	* image/mfileio.c: ANSI C function definition.

2015-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (libxetex_a_CFLAGS): Enable gcc warnings.

	* XeTeX_ext.[ch], XeTeXFontInst{cpp,h}, XeTeXFontMgr.cpp,
	XeTeXLayoutInterface.{cpp,h}, XeTeX_pic.c: