@@ -1,3 +1,8 @@
+2017-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* pdfimage.cpp: Support /Rotate in PDF image inclusion with
+	the new xdvipdfmx-20170806.
+
 2017-07-17  Jonathan Kew  <jfkthame@gmail.com>
 
 	* xetex.ch: Set a non-zero exit code if the pipe
